# security_cam

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: main.py
src/security_cam/: main.py
