[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "security-cam"
version = "0.1.0"
description = "IP Camera RTSP Live Viewer"
authors = [{name = "Daniel Brutti", email = "danielbrutti@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "opencv-python",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"] 